--- a/Monday_Lesson_Inclass-Lecture-Updated-Lecture (1).ipynb
+++ b/Monday_Lesson_Inclass-Lecture-Updated-Lecture (1).ipynb
@@ -1800,7 +1800,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cubes =[]\n",
+    "start = int(1) \n",
+    "end = int(1000)\n",
+    "j = 1\n",
+    "i = 1000\n",
+    "for j in range(j ** 3, i + 1 ) : \n",
+    "              \n",
+    "if (j ** 3 == i) : \n",
+    "    print( j ** 3, end = \" \") \n",
+    "break\n",
+    "    print(cubes) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1812,14 +1824,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primes up to 100: 60\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n"
+     ]
+    }
+   ],
    "source": [
     "# HINT::\n",
     "# An else after an if runs if the if didn’t\n",
     "# An else after a for runs if the for didn’t break\n",
+    "max = int(input(\"Primes up to 100: \"))\n",
     "\n",
+    "for x in range(2, max + 1):\n",
+    "    isPrime = True\n",
+    "    for y in range(2, x):\n",
+    "        if x % y == 0:\n",
+    "            isPrime = False\n",
+    "            \n",
+    "    if isPrime:\n",
+    "        print(x)\n",
+    "        \n",
+    "\n",
+    "    \n",
     "\n"
    ]
   },
@@ -1832,10 +1881,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "age = int(input('What is your age?'))\n",
+    "if age <18: \n",
+    "   print('kids')\n",
+    "elif age >= 18 and age <=65:\n",
+    "   print ('adults')\n",
+    "else:\n",
+    "   print('seniors')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "age = int(input('What is your age?')) \n",
+    "if age <18:\n",
+    "    print('kids') \n",
+    "elif age >= 18 and age <=65:\n",
+    "    print ('adults') \n",
+    "else:print('seniors')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
